--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
     "mongodb": "^6.15.0",
     "mongoose": "^7.6.3",
