--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mongodb": "^6.15.0",
     "mongoose": "^7.6.3",
     "validator": "^13.15.0"
