--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "env-cmd config/dev.env nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "env-cmd": "^8.0.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^6.15.0",
